--- a/Pandas_Python_Exercicios/exercicios_pandas_com_dataset.ipynb
+++ b/Pandas_Python_Exercicios/exercicios_pandas_com_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjUf/caIIj2t9Z1qZsLm86",
+      "authorship_tag": "ABX9TyP3yofM38AJjGIrYHpINM17",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CguIU1IELxF7",
-        "outputId": "a3d04597-8c65-4abc-c784-597571fc3901"
+        "outputId": "7fee3d5e-421f-4a8f-82bb-953f3a47620c"
       },
       "execution_count": 3,
       "outputs": [
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b_wXEiDYIwiV",
-        "outputId": "1b42f176-b0d6-40a0-f874-10d673105116"
+        "outputId": "16d2ad3e-32a9-4251-e7b1-a204aadea348"
       },
       "execution_count": 4,
       "outputs": [
@@ -142,7 +142,7 @@
           "height": 1000
         },
         "id": "fS1xCf9BMoPi",
-        "outputId": "283e2472-fbc9-4cbe-b0e7-32fd4d6606e7"
+        "outputId": "ef94d3fc-729c-4143-8207-ed147482a4ae"
       },
       "execution_count": 5,
       "outputs": [
@@ -233,7 +233,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-12661a9c-c521-453c-96cd-b933265606a7\">\n",
+              "  <div id=\"df-849e27d6-f0f2-4325-9c50-3da7159e9f20\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -545,7 +545,7 @@
               "</table>\n",
               "<p>187531 rows × 22 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-12661a9c-c521-453c-96cd-b933265606a7')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-849e27d6-f0f2-4325-9c50-3da7159e9f20')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -558,8 +558,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-d8fcb741-1bce-44a2-9617-274029e946cf\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d8fcb741-1bce-44a2-9617-274029e946cf')\"\n",
+              "    <div id=\"df-752f3871-e06a-4a43-91a1-e9c89931c5c9\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-752f3871-e06a-4a43-91a1-e9c89931c5c9')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -616,7 +616,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-d8fcb741-1bce-44a2-9617-274029e946cf button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-752f3871-e06a-4a43-91a1-e9c89931c5c9 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -663,12 +663,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-12661a9c-c521-453c-96cd-b933265606a7 button.colab-df-convert');\n",
+              "          document.querySelector('#df-849e27d6-f0f2-4325-9c50-3da7159e9f20 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-12661a9c-c521-453c-96cd-b933265606a7');\n",
+              "          const element = document.querySelector('#df-849e27d6-f0f2-4325-9c50-3da7159e9f20');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -695,13 +695,45 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Exercício 2 - Exploração de Propriedades\n"
+      ],
       "metadata": {
-        "id": "Ir_wWqcGMBdI"
+        "id": "pIGLKr7Rbf1u"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grouped = df.groupby(\"Furnishing\")\n",
+        "grouped = grouped.indices\n",
+        "furnished, unfurnished, semi_furnished = [grouped[\"Furnished\"].size, grouped[\"Unfurnished\"].size, grouped[\"Semi-Furnished\"].size]\n",
+        "all_furnishing = furnished + unfurnished + semi_furnished\n",
+        "print(\"Furnished: \" + str(furnished) + \", \" + str(round(((furnished/all_furnishing)*100), 2)) + \" %\" +  \"\\n\" +\n",
+        "\"Unfurnished: \" + str(unfurnished) + \", \" + str(round(((unfurnished/all_furnishing)*100), 2)) + \" %\"  + \"\\n\" +\n",
+        "\"Semi-Furnished: \" + str(semi_furnished) + \", \" + str(round(((semi_furnished/all_furnishing)*100), 2)) + \" %\"  + \"\\n\")"
+      ],
+      "metadata": {
+        "id": "Ir_wWqcGMBdI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bfc35713-44db-4176-90a6-5ff7f3cea1d6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Furnished: 20162, 10.92 %\n",
+            "Unfurnished: 76154, 41.25 %\n",
+            "Semi-Furnished: 88318, 47.83  %\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
