--- a/Pandas_Python_Exercicios/exercicios_pandas_com_dataset.ipynb
+++ b/Pandas_Python_Exercicios/exercicios_pandas_com_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3yofM38AJjGIrYHpINM17",
+      "authorship_tag": "ABX9TyMpuP9H1P3O4gFg4+2EPGLV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CguIU1IELxF7",
-        "outputId": "7fee3d5e-421f-4a8f-82bb-953f3a47620c"
+        "outputId": "b9dfed1d-b809-48b9-d360-014b8e41ac05"
       },
       "execution_count": 3,
       "outputs": [
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b_wXEiDYIwiV",
-        "outputId": "16d2ad3e-32a9-4251-e7b1-a204aadea348"
+        "outputId": "529e50c1-26dc-4d82-88b2-c86efe9ae137"
       },
       "execution_count": 4,
       "outputs": [
@@ -142,7 +142,7 @@
           "height": 1000
         },
         "id": "fS1xCf9BMoPi",
-        "outputId": "ef94d3fc-729c-4143-8207-ed147482a4ae"
+        "outputId": "e6f5a95c-95ea-4b0d-ae94-23517998b52b"
       },
       "execution_count": 5,
       "outputs": [
@@ -233,7 +233,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-849e27d6-f0f2-4325-9c50-3da7159e9f20\">\n",
+              "  <div id=\"df-b48cd518-9b9e-4fac-aca5-6e1efcf0a64c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -545,7 +545,7 @@
               "</table>\n",
               "<p>187531 rows × 22 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-849e27d6-f0f2-4325-9c50-3da7159e9f20')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b48cd518-9b9e-4fac-aca5-6e1efcf0a64c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -558,8 +558,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-752f3871-e06a-4a43-91a1-e9c89931c5c9\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-752f3871-e06a-4a43-91a1-e9c89931c5c9')\"\n",
+              "    <div id=\"df-0ccd757c-6386-49a3-8c83-ba6cce0e5369\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0ccd757c-6386-49a3-8c83-ba6cce0e5369')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -616,7 +616,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-752f3871-e06a-4a43-91a1-e9c89931c5c9 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-0ccd757c-6386-49a3-8c83-ba6cce0e5369 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -663,12 +663,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-849e27d6-f0f2-4325-9c50-3da7159e9f20 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b48cd518-9b9e-4fac-aca5-6e1efcf0a64c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-849e27d6-f0f2-4325-9c50-3da7159e9f20');\n",
+              "          const element = document.querySelector('#df-b48cd518-9b9e-4fac-aca5-6e1efcf0a64c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -697,7 +697,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Exercício 2 - Exploração de Propriedades\n"
+        "## Exercício 2 - Exploração de Propriedades\n"
       ],
       "metadata": {
         "id": "pIGLKr7Rbf1u"
@@ -719,7 +719,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bfc35713-44db-4176-90a6-5ff7f3cea1d6"
+        "outputId": "c9145ba7-e342-4ccf-cf13-ad2f045cd59b"
       },
       "execution_count": 6,
       "outputs": [
@@ -729,9 +729,168 @@
           "text": [
             "Furnished: 20162, 10.92 %\n",
             "Unfurnished: 76154, 41.25 %\n",
-            "Semi-Furnished: 88318, 47.83  %\n",
+            "Semi-Furnished: 88318, 47.83 %\n",
             "\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Exercício 3 - Análise por Tipo de Transação"
+      ],
+      "metadata": {
+        "id": "9flihCsXEjkR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.isnull().sum())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "owQIZJwg2hqb",
+        "outputId": "3356513d-495f-4a0f-a69c-caf874972a77"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index                     0\n",
+            "Title                     0\n",
+            "Description            3023\n",
+            "Amount(in rupees)         0\n",
+            "Price (in rupees)     17665\n",
+            "location                  0\n",
+            "Carpet Area           80673\n",
+            "Status                  615\n",
+            "Floor                  7077\n",
+            "Transaction              83\n",
+            "Furnishing             2897\n",
+            "facing                70233\n",
+            "overlooking           81436\n",
+            "Society              109678\n",
+            "Bathroom                828\n",
+            "Balcony               48935\n",
+            "Car Parking          103357\n",
+            "Ownership             65517\n",
+            "Super Area           107685\n",
+            "Dimensions           187531\n",
+            "Plot Area            187531\n",
+            "price_category            0\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YqWreHaEEmh2",
+        "outputId": "94292c38-4ff7-41c4-b0f8-9f18cb14155a"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Index', 'Title', 'Description', 'Amount(in rupees)',\n",
+              "       'Price (in rupees)', 'location', 'Carpet Area', 'Status', 'Floor',\n",
+              "       'Transaction', 'Furnishing', 'facing', 'overlooking', 'Society',\n",
+              "       'Bathroom', 'Balcony', 'Car Parking', 'Ownership', 'Super Area',\n",
+              "       'Dimensions', 'Plot Area', 'price_category'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"Floor\"]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fWfeOg7gE6n5",
+        "outputId": "eb2f3cab-ac3f-4a9d-f546-a4ba95d18abd"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0         10 out of 11\n",
+              "1          3 out of 22\n",
+              "2         10 out of 29\n",
+              "3           1 out of 3\n",
+              "4         20 out of 42\n",
+              "              ...     \n",
+              "187526      2 out of 4\n",
+              "187527      4 out of 6\n",
+              "187528      1 out of 3\n",
+              "187529      2 out of 2\n",
+              "187530     5 out of 13\n",
+              "Name: Floor, Length: 187531, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"Carpet Area\"]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EFcDsLvNFYiP",
+        "outputId": "046e3e20-c727-4b3f-e764-f1df20f5f4a1"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0          500 sqft\n",
+              "1          473 sqft\n",
+              "2          779 sqft\n",
+              "3          530 sqft\n",
+              "4          635 sqft\n",
+              "            ...    \n",
+              "187526          NaN\n",
+              "187527          NaN\n",
+              "187528    1250 sqft\n",
+              "187529          NaN\n",
+              "187530          NaN\n",
+              "Name: Carpet Area, Length: 187531, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     }
